# kxzz

./: java_to_rust_module_map.md  main_program_source_status.md  rust_api_design.md
rust_rewrite/: Cargo.toml  README.md
rust_rewrite/crates/app_core/: Cargo.toml
rust_rewrite/crates/app_core/examples/: session_shell.rs
rust_rewrite/crates/app_core/src/: canvas.rs  editor.rs  font.rs  history.rs  interaction.rs  lib.rs  session.rs  state.rs  tools.rs  trace.rs
rust_rewrite/crates/font_core/: Cargo.toml
rust_rewrite/crates/font_core/src/: convert.rs  crypto.rs  error.rs  io.rs  lib.rs  model.rs  parser.rs
rust_rewrite/crates/graph_core/: Cargo.toml
rust_rewrite/crates/graph_core/src/: graph.rs  lib.rs
rust_rewrite/crates/native_algorithms/: Cargo.toml
rust_rewrite/crates/native_algorithms/examples/: installed_smoke.rs
rust_rewrite/crates/native_algorithms/src/: api.rs  dll.rs  lib.rs
rust_rewrite/scripts/: hover_drag_probe.txt  overlap_hit_probe.txt
